# fleet_ota_platform

./: .gitignore  Cargo.toml  comando_restauracion.txt  export_firmware.sh  partitions.csv
.config/: config.toml
docs/: AUDITORIA-CALIDAD-GUÍA-26-06-2026.md  INFORME_TECNICO-26-06-2026.md  MANUAL DE OPERACIONES - COMANDOS VERSION 1.md  MANUAL DE OPERACIONES VERSION 1.md  esp_ota_client_main.md  esp_ota_client_mqtt.md  esp_ota_client_ota.md  ota_engine.rs
esp_ota_client/: .envrc  COMANDO_FLASH.txt  Cargo.toml  build.rs  flash_ota.sh  sdkconfig.defaults
esp_ota_client/.cargo/: config.toml
esp_ota_client/.config/: config.toml
esp_ota_client/src/: hal.rs  main.rs  mqtt.rs  ota.rs
fleet_manager/: .envrc  .envrc copy  Cargo.toml  cmando_compilacion.txt
fleet_manager/.config/: config.toml
fleet_manager/.sqlx/: config.json  query-7aeef2a7f73ad75037055d803c568816fa98423d34327d95f7b705f00a702ab7.json
fleet_manager/migrations/: 20260625090000_create_telemetry_table.sql
fleet_manager/src/: main.rs  ota_orchestrator.rs  telemetry_handler.rs
ota_server/: Cargo.toml
ota_server/.cargo/: config.toml
ota_server/src/: main.rs  ota_server.rs
shared_protocol/: Cargo.toml
shared_protocol/src/: lib.rs
